# tango-moench

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  codecov.yml
.github/ISSUE_TEMPLATE/: data-proccesing-bug-report.md  tango-device-bug-report.md
.github/workflows/: build-and-deploy-docs.yml  build-and-test.yml  build-docker.yml  check-build-docker.yml  create-tag-on-version.yml  publish-coverage.yml  ubuntu-build-tango-9.3.5.yml  ubuntu-build-tango-9.5.0.yml  ubuntu-build.yml
cmake/: CodeCoverage.cmake  FindTango.cmake  FindZeroMQ.cmake  FindomniORB4.cmake
docker/: Dockerfile
docs/: about.rst  api.rst  conf.py  developer.rst  faq.rst  index.rst  install.rst  refs.bib
resources/: moench03_virtual.config
scripts/: clang_format.sh  generate_previews.sh
src/tango-moenchcontrol/tangods/: MoenchControl.cpp  MoenchControl.h  MoenchControl.xmi  MoenchControlClass.cpp  MoenchControlClass.h  MoenchControlStateMachine.cpp
src/tango-moenchzmq/backend/: CPUComputationBackend.cpp  CPUComputationBackend.hpp  ComputationBackend.hpp  ComputationTest.cpp  FileWriter.hpp  HDFWriter.hpp
src/tango-moenchzmq/tangods/: MoenchZMQ.cpp  MoenchZMQ.h  MoenchZMQClass.cpp  MoenchZMQClass.h  MoenchZMQStateMachine.cpp
tango-moenchcontrol/: CMakeLists.txt
tango-moenchcontrol/src/: CMakeLists.txt
tango-moenchcontrol/src/tangods/: CMakeLists.txt  ClassFactory.cpp  MoenchControl.cpp  MoenchControl.h  MoenchControlClass.cpp  MoenchControlClass.h  MoenchControlStateMachine.cpp  main.cpp
tango-moenchcontrol/test/: CMakeLists.txt  moenchcontrol_test.cpp
tango-moenchzmq/: CMakeLists.txt
tango-moenchzmq/src/: CMakeLists.txt
tango-moenchzmq/src/backend/: CMakeLists.txt  CPUComputationBackend.cpp  CPUComputationBackend.hpp  CUDAProcessing.cu  ComputationBackend.hpp  FileWriter.hpp  Frames.hpp  HDFWriter.cpp  HDFWriter.hpp  ZMQListener.cpp  ZMQListener.hpp
tango-moenchzmq/src/tangods/: CMakeLists.txt  ClassFactory.cpp  MoenchZMQ.cpp  MoenchZMQ.h  MoenchZMQ.xmi  MoenchZMQClass.cpp  MoenchZMQClass.h  MoenchZMQStateMachine.cpp  main.cpp
tango-moenchzmq/test/: CMakeLists.txt  frames_datatype_test.cpp  hdfwriter_test.cpp  moenchzmq_test.cpp  zmqlistener_test.cpp
