enable_testing()

add_executable(frames_datatype_test frames_datatype_test.cpp)
add_executable(moenchzmq_test moenchzmq_test.cpp)
add_executable(hdfwriter_test hdfwriter_test.cpp)
add_executable(zmqlistener_test zmqlistener_test.cpp)

target_link_libraries(frames_datatype_test GTest::gtest_main moenchZmqStatic)
target_link_libraries(moenchzmq_test GTest::gtest_main moenchZmqStatic)
target_link_libraries(hdfwriter_test GTest::gtest_main moenchZmqStatic)
target_link_libraries(zmqlistener_test GTest::gtest_main GTest::gmock_main moenchZmqStatic)

include(GoogleTest)
gtest_discover_tests(frames_datatype_test)
gtest_discover_tests(moenchzmq_test)
gtest_discover_tests(hdfwriter_test)
gtest_discover_tests(zmqlistener_test)
